# dmk_benchmark

./: .gitignore  CMakeLists.txt  README.md  bench_pbc_accuracy.cpp  bench_pbc_mpi.cpp  bench_pbc_runtime.cpp  bench_pbc_stagecheck.cpp  run_pbc_mpi_accuracy.slurm  run_pbc_mpi_scaling.slurm  run_pbc_runtime_rusty_genoa.slurm
benchmark_results/: laplace_grad_fmm3d_6123072.err  laplace_grad_fmm3d_6123078.err  laplace_grad_fmm3d_6123738.err  laplace_grad_fmm3d_6123771.err
docs/: 2026-04-09-pbc-ewald-accuracy-design.md  2026-04-09-pbc-ewald-accuracy-plan.md  2026-04-09-pbc-runtime-design.md  2026-04-09-pbc-runtime-plan.md
docs/plans/: 2026-03-24-laplace-gradient-fmm3d-benchmark-design.md  2026-03-24-laplace-gradient-fmm3d-benchmark.md  2026-03-24-laplace-pot-grad-summary-design.md  2026-03-24-laplace-pot-grad-summary.md
docs/reports/: 2026-03-24-laplace-gradient-fmm3d-benchmark-smoke.md  2026-03-24-laplace-gradient-fmm3d-benchmark.md  2026-03-24-laplace-pot-grad-fmm3d-benchmark-smoke.md  2026-03-24-laplace-pot-grad-fmm3d-benchmark-summary.md  2026-03-24-laplace-pot-grad-fmm3d-benchmark.md  2026-04-09-pbc-runtime-rusty-genoa-report.md
examples/: benchmark_laplace_grad_fmm3d.cpp
results/: 2026-04-09-pbc-ewald-accuracy-digits-nleaf100-final.csv  2026-04-09-pbc-runtime-rusty-genoa-summary.csv  2026-04-09-pbc-runtime-rusty-genoa.csv  2026-04-10-pbc-mpi-accuracy.txt  2026-04-10-pbc-mpi-scaling-1nodes.csv  2026-04-10-pbc-mpi-scaling-2nodes.csv  2026-04-10-pbc-mpi-scaling-4nodes.csv  README-pbc-mpi-2026-04-10.md  README-pbc-runtime-2026-04-09.md  pbc_runtime_local_omp1.csv  pbc_runtime_local_omp4.csv  pbc_runtime_local_omp8.csv
results/laplace_grad_fmm3d/: bench_digits12_mpi1_omp1.csv  bench_digits12_mpi1_omp16.csv  bench_digits12_mpi1_omp2.csv  bench_digits12_mpi1_omp32.csv  bench_digits12_mpi1_omp4.csv  bench_digits12_mpi1_omp64.csv  bench_digits12_mpi1_omp8.csv  bench_digits12_mpi2_omp1.csv  bench_digits12_mpi2_omp16.csv  bench_digits12_mpi2_omp2.csv  bench_digits12_mpi2_omp32.csv  bench_digits12_mpi2_omp4.csv  bench_digits12_mpi2_omp64.csv  bench_digits12_mpi2_omp8.csv  bench_digits12_mpi4_omp1.csv  bench_digits12_mpi4_omp16.csv  bench_digits12_mpi4_omp2.csv  bench_digits12_mpi4_omp32.csv  bench_digits12_mpi4_omp4.csv  bench_digits12_mpi4_omp64.csv  (+64 more)
scripts/: laplace_grad_fmm3d_benchmark.sbatch  report_laplace_grad_fmm3d.py  report_laplace_grad_fmm3d_summary.py  run_laplace_grad_fmm3d_matrix.sh
(+98 files in other folders)
